functional backend getAvailbleReaderPrizes
